Add TabView Add theme colors Create TimerFragment and TimingsFragment Suppress warnings for Kotlin version and backup attributes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Cube Companion</string>
+
+    <!-- Tab Strings -->
+    <string name="timer_tab">Timer</string>
+    <string name="timings_tab">Timings</string>
 </resources>
